# chomp

./: .gitignore  README.md  pyproject.toml
configs/: debug_smoke.yaml  zyda2_100m_2048.yaml  zyda2_100m_2048_variables.yaml  zyda2_200m_2048.yaml  zyda2_smoke.yaml
configs/custom/muon-lr-scale-10k/: adamw_10k.yaml  muon_lr100_10k.yaml  muon_lr150_10k.yaml
docs/: checkpointing.md  config-reference.md  config-reference.qmd  configuration.md  data_pipeline.md  dev.md  optimization.md  packing.md  run-analysis-20260128_215038_zyda2_200m_2k-cema16-20k-gnorm.md  training.md
scripts/: diagnose_highloss.py
src/chomp/: __init__.py  ckpt.py  config.py  model.py  train.py  types.py
src/chomp/cli/: __init__.py  generate.py  main.py  train.py
src/chomp/data/: __init__.py  grain.py  hf.py  pack.py  pipeline.py
src/chomp/patches/: __init__.py  megalodon_segment_ids.py
src/chomp/scripts/: __init__.py  train.py
src/chomp/utils/: __init__.py  checkpoints.py  devices.py  io.py  profiling.py  tree.py  xla.py
tests/: __init__.py  conftest.py  test_bin_packer.py  test_cache_policy.py  test_checkpoint_integrity.py  test_checkpoint_paths.py  test_checkpoint_resume.py  test_checkpoints.py  test_cli.py  test_cli_banner.py  test_compile_stability.py  test_config.py  test_config_validation.py  test_config_variables.py  test_data_pipeline.py  test_device_placement.py  test_dry_run.py  test_eval.py  test_eval_integration.py  test_eval_texts.py  test_generate_cli.py  test_generate_config_loading.py  test_gpu_smoke.py  test_grad_accum_equivalence.py  test_grain_iterator.py  test_hf_pipeline_segment_ids.py  test_hf_state_roundtrip.py  test_init_sanity.py  test_label_alignment.py  test_megalodon_segment_integration.py  test_metric_finite_check.py  test_muon_optimizer.py  test_optimizer.py  test_packer_alignment_after_restore.py  test_param_count.py  test_pipeline_segment_ids.py  test_resume_meta_mismatch.py  test_segment_attention_mask.py  test_tokenizer_decode.py  test_tokenizer_resolution.py  (+9 more)
tests/helpers/: __init__.py  config_factories.py  hf_fakes.py
