[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chomp"
dynamic = ["version"]
description = "minimal, Single-GPU-first Megalodon JAX pretraining harness."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "chomp contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# NOTE:
# - JAX wheels (jaxlib) are platform/CUDA specific. See README.
# - We pin Orbax to avoid silent API drift.
dependencies = [
  "jax>=0.7.0",
  "equinox>=0.12.0",
  "megalodon-jax @ git+https://github.com/pszemraj/megalodon-jax.git",
  "optax>=0.2.4,<0.3",
  "orbax-checkpoint==0.11.31",
  "PyYAML>=6.0",
  "tqdm",
  "rich>=13.0",
  "wandb>=0.16.0",
  "grain>=0.2.15",
  "datasets>=3.0.0",
  # transformers (tokenizers)
  "transformers>=4.40.0",
  # CLI
  "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4.0"]

[project.scripts]
chomp = "chomp.cli.main:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/chomp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chomp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Implicit conversion of an array to a dtype is deprecated.*:DeprecationWarning:chex._src.asserts",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/chomp/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "F722", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["chomp"]
